Fix dark mode color

--- a/packages/theme/src/themes/atb-theme/theme.module.css
+++ b/packages/theme/src/themes/atb-theme/theme.module.css
@@ -212,8 +212,8 @@
   --static-transport-transport_bike-text: #FFFFFF;
   --static-transport-transport_other-background: #555E65;
   --static-transport-transport_other-text: #FFFFFF;
-  --static-status-default-background: #FFFFFF;
-  --static-status-default-text: #000000;
+  --static-status-default-background: #000000;
+  --static-status-default-text: #FFFFFF;
   --static-status-valid-background: #A2AD00;
   --static-status-valid-text: #000000;
   --static-status-info-background: #71D6E0;
@@ -357,8 +357,8 @@
   --static-transport-transport_bike-text: #FFFFFF;
   --static-transport-transport_other-background: #555E65;
   --static-transport-transport_other-text: #FFFFFF;
-  --static-status-default-background: #FFFFFF;
-  --static-status-default-text: #000000;
+  --static-status-default-background: #000000;
+  --static-status-default-text: #FFFFFF;
   --static-status-valid-background: #A2AD00;
   --static-status-valid-text: #000000;
   --static-status-info-background: #71D6E0;
